fixes for OSD reading view in mirador on mobile

--- a/css/less/osd-hud.less
+++ b/css/less/osd-hud.less
@@ -34,7 +34,7 @@
       bottom:10px;
       position: fixed;
       left: 50%;
-      width: 160px;
+      width: 200px;
       justify-content: space-between;
       margin-left: -80px;
       transition:all 200ms ease-in-out;
@@ -51,16 +51,20 @@
           &::before { content:'‹';}
         }
         
-        &.mirador-osd-reading-view span::before {    
-          background-image: url(../images/readingN.svg);
-          filter: invert(1);
-          content: '';
-          display: block;
-          width: 45px;
-          height: 50px;
-          background-size: contain;
-          background-position: center;
-          background-repeat: no-repeat;
+        &.mirador-osd-reading-view { 
+          span { 
+            &::before {    
+              background-image: url(../images/readingW.svg);
+              filter: invert(1);
+              content: '';
+              display: block;
+              width: 42px;
+              height: 42px;
+              background-size: contain;
+              background-position: center;
+              background-repeat: no-repeat;
+            }
+          }
         }
       }
 
